--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 ﻿name: LiveFleaPrice Fetcher
 
 on:
-  pull_request:
+  workflow_dispatch: 
   schedule:
     - cron: '0 * * * *' # Runs every hour
 
