--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: '20'
 
-      - run: npm ci
+      - run: npm install
       - run: npm run fetch
 
       - name: Commit and push changes
