--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,6 @@ jobs:
           repository: ${{ github.repository }}
           retain_days: 1
           keep_minimum_runs: 5
+          delete_workflow_by_state_pattern: deleted, disabled_fork, disabled_inactivity, disabled_manually
 
                 
