--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,6 @@ jobs:
           repository: ${{ github.repository }}
           retain_days: 0
           keep_minimum_runs: 1
-          delete_workflow_by_state_pattern: deleted, disabled_fork, disabled_inactivity, disabled_manually
+          delete_run_by_conclusion_pattern: cancelled, failure, skipped, success
 
                 
