--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "SPT live flea price DB updater",
   "main": "src/index.mjs",
   "scripts": {
-    "fetch": "node src/index.mjs --aki-online=false --aki-branch=3.9.0-DEV"
+    "fetch": "node src/index.mjs --aki-online=false --aki-branch=master"
   },
   "repository": {
     "type": "git",
