--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@
 
 on:
   workflow_dispatch: 
-  schedule:
-    - cron: '*/30 * * * *' # Runs every 0.5 hour
+#  schedule:
+#    - cron: '*/30 * * * *' # Runs every 0.5 hour
 
 jobs:
   fetch_data:
